<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventId" />

        <EditText
            android:id="@+id/idNuevoEventoUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CE93D8"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/eventId"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventName" />

        <EditText
            android:id="@+id/nombreNuevoEventoUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CE93D8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/eventName" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventStart" />

        <EditText
            android:id="@+id/inicioNuevoEventoUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CE93D8"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventEnd" />

        <EditText
            android:id="@+id/finNuevoEventoUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CE93D8"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventObservs" />

        <EditText
            android:id="@+id/observacionesNuevoEventoUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#CE93D8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/eventObservs" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/buttonAceptarNuevoUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E6EE9C"
                    android:text="@string/btnBuscarByName" />

                <Button
                    android:id="@+id/buttonActualizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFCC80"
                    android:text="@string/btnUpdate" />


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>