<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#90CAF9"
            android:foregroundTint="@color/colorAccent"
            android:onClick="openAddEvent"
            android:text="@string/btnAdd" />

        <Button
            android:id="@+id/buttonFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9FA8DA"
            android:text="@string/btnFind"
            android:textColorHighlight="@color/design_default_color_primary" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFCC80"
            android:text="@string/btnUpdate" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>