<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventName"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombre_Lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="-" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inicio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/inicio_Lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:text="-" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fin_Lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/observs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventObservs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/observs_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="-" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>